# mpix-streams-pub

./: CMakeLists.txt  README.md  mpix-streams.pc.in  mpixstreams-config.cmake.in
benchmarks/: CMakeLists.txt  compute_overlap.hip  latency_overlap.hip
benchmarks/compute/: compute_kernel.h  compute_kernel.hip
include/: mpix_streams.h
src/: comm_init.cc  comm_sync_stream.cc  greq.h  init.cc  irecv.cc  isend.cc  recv_init.cc  send_init.cc  start.cc  stream_set.cc  stream_wait.cc  streams.h
tests/: CMakeLists.txt  graph_capture.hip  graph_create.hip  isend.hip  isend_irecv.hip
